Version 8.2 - xxx edition. 16 March 2020

Added F key to toggle top cpu speed
Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
Added Visualmem for MMC Read/Write
Added Visualmem "Defrag style"
Added browser for quicksave snapshots

Improved Esxdos handler: 
-add f_mkdir function 
-add configuration setting to save local work directory

Improved ZRCP:
-Allow to write commands between "". Not all commands support this
-Added save-binary command

Improve TBBlue emulation:
-Enable Timex video by default
-Added altrom feature: now 48k and 128k mode works again


Fixed ZRCP bugs:
-Fix possible crash when disconnecting socket

Fixed rom loading: no more cpu panic when the rom is not found 

Fixed Esxdos handler: 
-fixed segfaults when using a file handler that was a directory

Fixed SCF/CCF undocumented flags emulation. Not enabled by default on compilation because almost no one is using this



Version 8.1.1 - The Great Escape edition. 2 March 2020

Fixed starting the emulator on some Mac OS versions


Version 8.1 - The Great Escape edition. 25 February 2020


Added ZEsarUX Network Gaming protocol (ZENG), which allows you to play to any emulated game, using two ZEsarUX instances, 
located each one on any part of the world or in a local network. Games doesn't have to be modified, you can use any existing game

Added Spectrum and ZX81 online game browser. You can search & play almost any game for these machines!
Added real joystick support on Windows
Added Pentagon 16C colour mode emulation
Added 1024 KB RAM emulation for Spectrum & Pentagon
Added ZIP files support: no more need to use external unzip program
Added SCL files support: can be converted from file selector menu pressing space
Added SNA saving support
Added PZX tape file support
Added SCR to TAP file converter

Added total run time statistics 
Added checking for updates
Added sending anonymous statistics use