@@ -317,3 +317,5 @@ entonces en el servidor, en el archivo de update de la estable, ya habré actual
 
 -Visualmem mmc read/write en Windows no muestra bien posicion (siempre a 0). Probablemente porque es 32 bits y no gestiona bien
 valores long int
+
+-referenciar FreeBSD en features, docs etc. Generar una build freebsd en cada release?
