@@ -43,6 +43,9 @@
 #endif
 
 
+#ifdef __FreeBSD__
+#include <netinet/in.h>
+#endif
 
 //Maxima longitud de una url (valor inventado por mi)
 #define NETWORK_MAX_URL 1024
