@@ -1,5 +1,6 @@
 Version 8.2 - xxx edition. 16 March 2020
 
+Added support for compilation on FreeBSD
 Added F key to toggle top cpu speed
 Added emulation of AY chip MIDI registers 14 & 15 and route them to an external MIDI device
 Added Visualmem for MMC Read/Write
